Authors: Kevin Flathers, Dominic Lopriore

#	Subject
+	Added
-	Deleted
%	Changed

Version 0.1 Initial release
	#General
		%	06/23/2017 fixed relative importing
		%	06/23/2107 all modules now can properly use Tgml imports
	#Animate
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#AnimatedImage
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Arc
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Bind
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Chord
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Component
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#ConvertCustom
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#ConvertRange
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#ConvertStatus
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#ConvertText
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#ConvertValue
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Curve
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
		%	06/21/2017 fixed issue in super().__init__()
	#Ellipse
		+	06/07/2017 class added