@@ -17,3 +17,5 @@ class GradientStop(Tgml):
 
 	def __init__(self, *args, input_type='blank', **kwargs):
 		super().__init__(*args, input_type, **kwargs)
+		self.__properties = {}
+		self.__exposed_properties = {}
