@@ -11,9 +11,11 @@ Purpose:
 from .Tgml import *
 
 class RadialGradient(Tgml):
-	properties = {}
+	
 	DEFAULT_PROPERTIES = {}
 	SUPPORTED_CHILDREN = {}
 
 	def __init__(self, *args, input_type='blank', **kwargs):
 		super().__init__(*args, input_type, **kwargs)
+		self.__properties = {}
+		self.__exposed_properties = {}
