@@ -9,6 +9,7 @@ Version 0.1 Initial release
 	#General
 		%	06/23/2017 fixed relative importing
 		%	06/23/2107 all modules now can properly use Tgml imports
+		%	07/11/2017 fixed object instances with properties and exposed properties
 	#Animate
 		+	06/07/2017 class added
 		%	06/09/2017 __init__() changed for proper inheritance
@@ -175,6 +176,7 @@ Version 0.1 Initial release
 		%	07/05/2017 changed fix_scripts() to fix_cdata() and added Text / TextBox to be corrected
 		%	07/05/2017 fixed file reading issues
 		%	07/05/2017 re-added checkset on properties
+		%	07/05/2017 removed checkset on properties because of previous misconception
 	#Translate
 		+	06/07/2017 class added
 		%	06/09/2017 __init__() changed for proper inheritance
